k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trailcommand-web
  labels:
    app: trailcommand-web
    component: frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: trailcommand-web
